# dasar-actix-web

./: LICENSE  README.md
aw_api/: .env.example  Cargo.toml
aw_api/config/: development.toml  production.toml
aw_api/migrations/: 20230714231559_initial_setup.down.sql  20230714231559_initial_setup.up.sql  20230714232107_create_users.up.sql  20230714232409_create_followers.up.sql  20230714232628_create_articles.down.sql  20230714232628_create_articles.up.sql  20230714233050_create_comments.up.sql  20230714233244_create_article_tags.down.sql  20230714233244_create_article_tags.up.sql
aw_api/src/: errors.rs  lib.rs  main.rs  server.rs  settings.rs  utils.rs
aw_api/src/routes/: articles.rs  comments.rs  mod.rs  ping.rs  profile.rs  tags.rs  users.rs
aw_api/src/schemas/: article_comment_schema.rs  article_tag_schema.rs  articles_schema.rs  mod.rs  profile_schema.rs  users_schema.rs
aw_api/tests/: ping.rs
aw_api/tests/api/: articles.rs  comment.rs  main.rs  ping.rs  profile.rs  tags.rs  test_utils.rs  users.rs
aw_application/: Cargo.toml
aw_application/src/: lib.rs  main.rs
aw_application/src/auth/: auth.rs  mod.rs
aw_application/src/security/: mod.rs  security.rs
aw_database/: .env  Cargo.toml
aw_database/src/: main.rs  models.rs  schema.rs
aw_error_handling/: Cargo.toml
aw_error_handling/src/: main.rs
aw_extractor/: Cargo.toml
aw_extractor/src/: main.rs
aw_handlers/: Cargo.toml
aw_handlers/src/: main.rs
aw_http2/: Cargo.toml
aw_http2/src/: main.rs
aw_httpserver/: Cargo.toml
aw_httpserver/src/: main.rs
aw_middleware/: Cargo.toml
aw_middleware/src/: main.rs
aw_request/: Cargo.toml
aw_request/src/: main.rs
aw_responses/: Cargo.toml
aw_responses/src/: main.rs
aw_static_files/: Cargo.toml  index.html
aw_static_files/src/: main.rs
aw_static_files/static/: app.txt
aw_testing/: Cargo.toml
aw_testing/src/: main.rs  server.rs
aw_testing/src/routes/: api.rs  mod.rs
aw_testing/tests/: api.rs
aw_url_dispatch/: Cargo.toml
aw_url_dispatch/src/: main.rs  main_part2.rs
aw_websockets/: Cargo.toml
aw_websockets/src/: main.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
