[package]
name = "aw_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.18"
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
config = "0.13.3"
serde = { version = "1.0.175", features = ["derive"] }
thiserror = "1.0.48"
serde_json = "1.0.105"
validator = { version = "0.16.1", features = ["derive", "validator_derive"] }