[package]
name = "aw_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
serde = { version = "1.0.164", features = ["derive"] }
