[package]
name = "aw_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bytes = "1.4.0"
flate2 = "1.0.25"
futures = "0.3.28"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
